compiler/tests/compiler/must_fail/t_09.mil.exp.err
Parsing tests/compiler/must_fail/t_09.mil as MIL

tests/compiler/must_fail/t_09.mil:2:3: 2:11 error: arity of return value does not match type, got 1, expected 2
  return x;
  ^^^^^^^^^
